recognize people with drone

--- a/face-recognition-with-open-cv-haar-cascade.ipynb
+++ b/face-recognition-with-open-cv-haar-cascade.ipynb
@@ -25,7 +25,7 @@
     "  \n",
     "# open image\n",
     "# used picture from https://pixabay.com/photos/man-silly-expression-funny-crazy-869215/\n",
-    "img = cv2.imread(\"image.jpg\")\n",
+    "img = cv2.imread(\"img/image.jpg\")\n",
     "  \n",
     "# RGB and grayscale version\n",
     "img_gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
